trabajando en la documentacion

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet" />
 
-  <!--
-    Redoc doesn't change outer page styles
-    -->
+  <!-- Redoc doesn't change outer page styles -->
   <style>
     body {
       margin: 0;
@@ -21,13 +19,9 @@
 </head>
 
 <body>
-  <!--
-    Redoc element with link to your OpenAPI definition
-    -->
+  <!-- Redoc element with link to your OpenAPI definition -->
   <redoc spec-url="openapi.yml"></redoc>
-  <!--
-    Link to Redoc JavaScript on CDN for rendering standalone element
-    -->
+  <!-- Link to Redoc JavaScript on CDN for rendering standalone element -->
   <script crossorigin="anonymous" src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
 </body>
 
