Script para cambiar los status codes por events en un webhook

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     }
 
   </style>
+
 </head>
 
 <body>
@@ -23,6 +24,9 @@
   <redoc spec-url="openapi.yml"></redoc>
   <!-- Link to Redoc JavaScript on CDN for rendering standalone element -->
   <script crossorigin="anonymous" src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
+  
+  <!-- Extra script for changing status codes in responses -->
+  <script src="status-changer.js"></script>
 </body>
 
 </html>
