--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Redoc</title>
+  <title>Docs</title>
   <!-- needed for adaptive design -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -21,10 +21,10 @@
 
 <body>
   <!-- Redoc element with link to your OpenAPI definition -->
-  <redoc spec-url="openapi.yml"></redoc>
+  <redoc spec-url="openapi.yaml"></redoc>
   <!-- Link to Redoc JavaScript on CDN for rendering standalone element -->
   <script crossorigin="anonymous" src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
-  
+
   <!-- Extra script for changing status codes in responses -->
   <script src="status-changer.js"></script>
 </body>
